<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="smssdk_error_desc_400">无效请求</string>
    <string name="smssdk_error_desc_401">token为空</string>
    <string name="smssdk_error_desc_402">token不存在</string>
    <string name="smssdk_error_desc_403">CRC32为空</string>
    <string name="smssdk_error_desc_404">CRC32非法</string>
    <string name="smssdk_error_desc_405">AppKey为空</string>
    <string name="smssdk_error_desc_406">AppKey错误</string>
    <string name="smssdk_error_desc_407">缺少数据</string>
    <string name="smssdk_error_desc_408">无效的参数</string>
    <string name="smssdk_error_desc_418">内部接口调用失败</string>
    <string name="smssdk_error_desc_419">duid对应的token不存在</string>
    <string name="smssdk_error_desc_450">权限不足</string>
    <string name="smssdk_error_desc_451">User-Agent为空</string>
    <string name="smssdk_error_desc_452">User-Agent格式错误</string>
    <string name="smssdk_error_desc_453">解密错误</string>
    <string name="smssdk_error_desc_454">数据格式错误</string>
    <string name="smssdk_error_desc_455">签名无效</string>
    <string name="smssdk_error_desc_456">手机号码错误</string>
    <string name="smssdk_error_desc_457">非法手机号</string>
    <string name="smssdk_error_desc_458">AppKey在黑名单中</string>
    <string name="smssdk_error_desc_459">无appKey的控制数据</string>
    <string name="smssdk_error_desc_460">无权限发送短信</string>
    <string name="smssdk_error_desc_461">不支持该地区发送短信</string>
    <string name="smssdk_error_desc_462">每分钟发送次数超限</string>
    <string name="smssdk_error_desc_463">手机号码每天发送次数超限</string>
    <string name="smssdk_error_desc_464">每台手机每天发送次数超限</string>
    <string name="smssdk_error_desc_465">号码在App中每天发送短信的次数超限</string>
    <string name="smssdk_error_desc_466">校验的验证码为空</string>
    <string name="smssdk_error_desc_467">校验验证码请求频繁</string>
    <string name="smssdk_error_desc_468">需要校验的验证码错误</string>
    <string name="smssdk_error_desc_469">未开启web发送短信</string>
    <string name="smssdk_error_desc_470">账户余额不足</string>
    <string name="smssdk_error_desc_471">请求IP错误</string>
    <string name="smssdk_error_desc_472">获取客户端平台错误</string>
    <string name="smssdk_error_desc_473">服务端根据duid获取平台错误</string>
    <string name="smssdk_error_desc_474">没有打开服务端验证开关</string>
    <string name="smssdk_error_desc_475">appKey的应用信息不存在</string>
    <string name="smssdk_error_desc_476">当前appkey发送短信的数量超过限额</string>
    <string name="smssdk_error_desc_477">当前手机号发送短信的数量超过限额</string>
    <string name="smssdk_error_desc_478">当前手机号在当前应用内发送超过限额</string>
    <string name="smssdk_error_desc_500">服务器内部错误</string>
    <string name="smssdk_error_desc_501">501 Not Implemented</string>
    <string name="smssdk_error_desc_502">502 Bad Gateway</string>
    <string name="smssdk_error_desc_503">503 Service Unavailable</string>
    <string name="smssdk_error_desc_504">504 Gateway Timeout</string>
    <string name="smssdk_error_desc_505">505 HTTP Version Not Supported</string>
    <string name="smssdk_error_desc_506">506 Variant Also Negotiates (RFC 2295)</string>
    <string name="smssdk_error_desc_507">507 Insufficient Storage (WebDAV; RFC 4918)</string>
    <string name="smssdk_error_desc_508">508 Loop Detected (WebDAV; RFC 5842)</string>
    <string name="smssdk_error_desc_510">510 Not Extended (RFC 2774)</string>
    <string name="smssdk_error_desc_511">511 Network Authentication Required (RFC 6585)</string>
    <string name="smssdk_error_desc_600">请求太频繁，API使用受限制</string>
    <string name="smssdk_error_desc_601">开关未打开，短信发送受限</string>
    <string name="smssdk_error_desc_602">无法发送此地区短信</string>
    <string name="smssdk_error_desc_603">请填写正确的手机号码</string>
    <string name="smssdk_error_desc_604">当前服务暂不支持此国家，请选择其它国家</string>
    <string name="smssdk_error_desc_605">没有权限连接服务端</string>
    <string name="smssdk_error_desc_server_busy">服务器繁忙</string>
    <string name="smssdk_error_detail_400">客户端请求不能被识别。</string>
    <string name="smssdk_error_detail_401">请求的token为空。</string>
    <string name="smssdk_error_detail_402">请求的token不存在。</string>
    <string name="smssdk_error_detail_403">请求Header中的hash为空。</string>
    <string name="smssdk_error_detail_404">请求Header中的hash非法。</string>
    <string name="smssdk_error_detail_405">请求的AppKey为空。</string>
    <string name="smssdk_error_detail_406">请求的AppKey不存在。</string>
    <string name="smssdk_error_detail_407">请求提交的数据缺少必要的数据。</string>
    <string name="smssdk_error_detail_408">无效的请求参数。</string>
    <string name="smssdk_error_detail_418">内部接口调用失败。</string>
    <string name="smssdk_error_detail_419">appKey_token对应的duid不存在</string>
    <string name="smssdk_error_detail_450">无权执行该操作。</string>
    <string name="smssdk_error_detail_451">所有访问服务器的接口，在请求的头部必须加入指定格式的User-Agent。</string>
    <string name="smssdk_error_detail_452">请求头中的User-Agent格式错误。</string>
    <string name="smssdk_error_detail_453">解密请求数据错误。</string>
    <string name="smssdk_error_detail_454">请求传递的数据格式错误，服务器无法转换为JSON格式的数据。</string>
    <string name="smssdk_error_detail_455">签名检验。</string>
    <string name="smssdk_error_detail_456">提交的手机号码或者区号为空。</string>
    <string name="smssdk_error_detail_457">提交的手机号格式不正确（包括手机的区号）。</string>
    <string name="smssdk_error_detail_458">AppKey在发送黑名单中</string>
    <string name="smssdk_error_detail_459">获取appKey控制发送短信的数据失败。</string>
    <string name="smssdk_error_detail_460">没有打开客户端发送短信的开关。</string>
    <string name="smssdk_error_detail_461">没有开通给当前地区发送短信的功能。</string>
    <string name="smssdk_error_detail_462">每分钟发送短信的数量超过限制。</string>
    <string name="smssdk_error_detail_463">手机号码每天发送短信的次数超出限制。</string>
    <string name="smssdk_error_detail_464">每台手机每天发送短信的次数超限。</string>
    <string name="smssdk_error_detail_465">手机号码在APP中每天发送短信的数量超限。</string>
    <string name="smssdk_error_detail_466">提交的校验验证码为空。</string>
    <string name="smssdk_error_detail_467">验证失败3次，验证码失效，请重新请求</string>
    <string name="smssdk_error_detail_468">用户提交校验的验证码错误。</string>
    <string name="smssdk_error_detail_469">没有打开通过网页端发送短信的开关。</string>
    <string name="smssdk_error_detail_470">账户的短信余额不足。</string>
    <string name="smssdk_error_detail_471">通过服务端发送或验证短信的IP错误</string>
    <string name="smssdk_error_detail_472">服务端根据duid获取平台错误。</string>
    <string name="smssdk_error_detail_473">服务端根据duid获取平台错误</string>
    <string name="smssdk_error_detail_474">没有打开服务端验证开关</string>
    <string name="smssdk_error_detail_475">appKey的应用信息不存在</string>
    <string name="smssdk_error_detail_476">如果当前appkey对应的包名没有通过审核，每天次appkey+包名最多可以发送20条短信</string>
    <string name="smssdk_error_detail_477">当前手机号码每天最多可发送短信10条，包括客户端发送和WebApi发送</string>
    <string name="smssdk_error_detail_478">当前手机号码在当前应用下12小时内最多可发送文本验证码5条</string>
    <string name="smssdk_error_detail_500">服务端程序报错。</string>
    <string name="smssdk_error_detail_501">501 Not Implemented</string>
    <string name="smssdk_error_detail_502">502 Bad Gateway</string>
    <string name="smssdk_error_detail_503">503 Service Unavailable</string>
    <string name="smssdk_error_detail_504">504 Gateway Timeout</string>
    <string name="smssdk_error_detail_505">505 HTTP Version Not Supported</string>
    <string name="smssdk_error_detail_506">506 Variant Also Negotiates (RFC 2295)</string>
    <string name="smssdk_error_detail_507">507 Insufficient Storage (WebDAV; RFC 4918)</string>
    <string name="smssdk_error_detail_508">508 Loop Detected (WebDAV; RFC 5842)</string>
    <string name="smssdk_error_detail_510">510 Not Extended (RFC 2774)</string>
    <string name="smssdk_error_detail_511">511 Network Authentication Required (RFC 6585)</string>
    <string name="smssdk_error_detail_600">请求太频繁，API使用受限制</string>
    <string name="smssdk_error_detail_601">开关未打开，短信发送受限</string>
    <string name="smssdk_error_detail_602">无法发送此地区短信</string>
    <string name="smssdk_error_detail_603">请填写正确的手机号码</string>
    <string name="smssdk_error_detail_604">当前服务暂不支持此国家，请选择其它国家</string>
    <string name="smssdk_error_detail_605">没有权限连接服务端</string>
    <string name="about_us">关于我们</string>
    <string name="accept_new_msg">接收新消息通知</string>
    <string name="account_detail">收支明细</string>
    <string name="account_id">试客id：</string>
    <string name="ad_stop">广告已停止！</string>
    <string name="again_task">用户已经提交过该任务</string>
    <string name="all_earnings">总共收益：</string>
    <string name="app_name">红包试客</string>
    <string name="aty_title">标题</string>
    <string name="auditing">审核中</string>
    <string name="award">，奖励</string>
    <string name="bang_name">绑定支付宝的真实姓名</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_phone_1">绑定手机</string>
    <string name="bind_phone_now">马上绑定手机</string>
    <string name="bind_weixin">绑定微信号</string>
    <string name="bind_weixin_1">绑定微信</string>
    <string name="cancel">取消</string>
    <string name="carry_now">马上提现</string>
    <string name="contact_ol">联系在线QQ客服</string>
    <string name="discont_1">原价</string>
    <string name="download">下载</string>
    <string name="e_mail">邮箱或手机号码</string>
    <string name="good">好的</string>
    <string name="input_code">输入验证码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="install">安装</string>
    <string name="install_msg">任务完成后开启自动加载，免除手动安装，是否开启？</string>
    <string name="obtain_code">获取语音验证</string>
    <string name="ol_more">更多红包试客资讯，可关注红包试客公众号</string>
    <string name="ol_msg_1">红包试客MM在线时间</string>
    <string name="ol_msg_2">周一至周五9:00-18:00，节假日请留言</string>
    <string name="ol_msg_3">咨询格式：红包试客号+详细问题</string>
    <string name="open">开启</string>
    <string name="open_auto_install">开启自动安装</string>
    <string name="qian_dao">签到</string>
    <string name="screen_shot">截图</string>
    <string name="sms_tips">（安全卫士等安全软件，可能拦截或定义该号码为骚扰来电，请忽略或暂时关闭；如关闭安全软件后还是收不到来电请联系在线客服）</string>
    <string name="sms_tips_1">您将收到一个手机来电</string>
    <string name="sms_tips_2">接听后可获取验证码</string>
    <string name="tips_2">绑定手机号后，当更换或丢失设备，您可以通过【手机绑定】功能，输入已绑定的手机号码找回之前的红包试客号码。</string>
    <string name="tips_3">为保证资金安全和手机充值，请绑定手机号码</string>
    <string name="true_name">真实姓名</string>
    <string name="try_play">试玩</string>
    <string name="try_play_btn_text2">试玩应用</string>
    <string name="try_play_mission_1">1、需点击《试玩应用》开始任务</string>
    <string name="try_play_mission_2">必须通过【试玩应用】按钮开启任务</string>
    <string name="try_play_mission_3">3、返回红包试客，获取试玩奖励</string>
    <string name="try_play_msg_1">完成试玩任务，可解锁</string>
    <string name="try_play_msg_2">签到任务</string>
    <string name="try_play_msg_3">试玩【</string>
    <string name="try_play_msg_4">】奖励</string>
    <string name="wifi">非WiFi网络提醒</string>
    <string name="wifi_1">当前为移动网络状态，下载将消耗移动网络流量，是否继续下载？</string>
    <string name="yuan_">元</string>
    <string name="zhifubao_account">支付宝帐号</string>
</resources>