<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title" />
    <ImageView android:id="@id/olservice_iv_mm" android:layout_width="@dimen/dimen_70dp" android:layout_height="@dimen/dimen_70dp" android:layout_marginTop="@dimen/dimen_10dp" />
    <TextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/ol_msg_1" />
    <TextView android:textSize="@dimen/dimen_12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/ol_msg_2" />
    <TextView android:textSize="@dimen/dimen_12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/ol_msg_3" />
    <Button android:textSize="@dimen/dimen_16dp" android:textColor="@color/white" android:id="@id/olservice_btn_qq" android:background="@drawable/btn_press_red_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_15dp" android:text="@string/contact_ol" />
    <View android:layout_marginLeft="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_15dp" style="@style/horizontal_line" />
    <ImageView android:id="@id/olservice_iv_code" android:layout_width="@dimen/dimen_150dp" android:layout_height="@dimen/dimen_150dp" android:layout_marginTop="@dimen/dimen_5dp" />
    <TextView android:textSize="@dimen/dimen_13dp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ol_more" />
</LinearLayout>