<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/default_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_play_msg_1" />
        <TextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/red" android:id="@id/try_play_detail_tv_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_play_msg_2" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/white" android:padding="@dimen/dimen_15dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/try_play_detail_appIcon" android:layout_width="@dimen/dimen_50dp" android:layout_height="@dimen/dimen_50dp" android:layout_marginBottom="@dimen/dimen_10dp" android:src="@drawable/default_icon" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_10dp">
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_play_msg_3" />
            <TextView android:textColor="@color/black" android:id="@id/try_play_detail_tv_appName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_play_msg_4" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_width="@dimen/dimen_25dp" android:layout_height="@dimen/dimen_25dp" android:src="@drawable/lm_icon" />
            <TextView android:textSize="@dimen/dimen_16dp" android:textColor="@color/red" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen_2dp" android:text="+" />
            <TextView android:textSize="@dimen/dimen_25dp" android:textColor="@color/red" android:layout_gravity="bottom" android:id="@id/try_play_detail_tv_cost" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/dimen_15dp" android:textColor="@color/red" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_2dp" android:text="@string/yuan_" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/frame_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_20dp">
        <ImageView android:layout_width="@dimen/dimen_60dp" android:layout_height="@dimen/dimen_60dp" android:layout_marginLeft="@dimen/dimen_15dp" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_15dp" android:layout_marginBottom="@dimen/dimen_20dp" android:src="@drawable/renwu_icon" />
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_15dp" android:layout_marginBottom="@dimen/dimen_20dp" android:layout_weight="1.0">
            <TextView android:textColor="@color/zdy_grey2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_5dp" android:text="@string/try_play_mission_1" />
            <TextView android:textColor="@color/red" android:id="@id/try_play_detail_tv_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_5dp" />
            <TextView android:textColor="@color/zdy_grey2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/try_play_mission_3" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_20dp">
        <ProgressBar android:id="@id/try_play_detail_pb" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50dp" style="@style/ProgressBar_Mini" />
        <TextView android:textSize="@dimen/dimen_16dp" android:textColor="@color/white" android:gravity="center" android:id="@id/try_play_detail_tv_pb" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50dp" android:text="@string/download" />
        <Button android:textSize="@dimen/dimen_16dp" android:textColor="@color/white" android:id="@id/try_play_detail_btn_install" android:background="@drawable/btn_red_click" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50dp" android:text="@string/install" />
    </RelativeLayout>
    <Button android:textSize="@dimen/dimen_16dp" android:textColor="@color/white" android:id="@id/try_play_detail_btn_tryPlay" android:background="@drawable/btn_grey_bg" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50dp" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_20dp" android:text="@string/try_play_btn_text2" />
    <TextView android:textColor="@color/zdy_grey2" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/try_play_mission_2" />
</LinearLayout>