<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/frame_white" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/dimen_15dp" android:textColor="@color/black" android:gravity="center" android:paddingLeft="@dimen/dimen_25dp" android:paddingRight="@dimen/dimen_25dp" android:layout_width="@dimen/dimen_280dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_15dp" android:layout_marginBottom="@dimen/dimen_10dp" android:text="@string/wifi" />
    <TextView android:textSize="@dimen/dimen_15dp" android:textColor="@color/black" android:gravity="center" android:id="@id/mission_tips" android:paddingLeft="@dimen/dimen_25dp" android:paddingRight="@dimen/dimen_25dp" android:layout_width="@dimen/dimen_280dp" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_15dp" android:text="@string/wifi_1" android:lineSpacingExtra="@dimen/dimen_5dp" />
    <View android:background="@color/zdy_grey1" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_1dp" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/dimen_15dp" android:textColor="@color/zdy_grey1" android:id="@id/btn_cancel" android:background="@null" android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_40dp" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:background="@color/zdy_grey1" android:layout_width="@dimen/dimen_1dp" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/dimen_15dp" android:textColor="@color/zdy_grey1" android:id="@id/btn_ok" android:background="@null" android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_40dp" android:text="@string/download" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>