<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/default_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title" />
    <RelativeLayout android:background="@color/default_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/ec_zhifubao_ll" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/dimen_12dp" android:gravity="center" android:id="@id/ec_zhifubao_tips" android:padding="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="隔天17：00前发货" />
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:padding="@dimen/dimen_15dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:layout_width="@dimen/dimen_120dp" android:layout_height="wrap_content" android:text="@string/zhifubao_account" />
                <EditText android:textSize="@dimen/dimen_15dp" android:id="@id/ec_zhifubao_et_account" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/e_mail" />
            </LinearLayout>
            <View android:background="@color/default_bg" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_1dp" />
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:padding="@dimen/dimen_15dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:layout_width="@dimen/dimen_120dp" android:layout_height="wrap_content" android:text="@string/true_name" />
                <EditText android:textSize="@dimen/dimen_15dp" android:id="@id/ec_zhifubao_et_name" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/bang_name" />
            </LinearLayout>
            <GridView android:id="@id/ec_zhifubao_gv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_30dp" android:layout_marginRight="@dimen/dimen_20dp" android:listSelector="@android:color/transparent" android:horizontalSpacing="@dimen/dimen_10dp" android:verticalSpacing="@dimen/dimen_10dp" android:numColumns="2" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="@dimen/dimen_15dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/dimen_12dp" android:id="@id/ec_zhifubao_tv_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/discont_1" />
                <TextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/zdy_red1" android:id="@id/ec_zhifubao_tv_cost" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20" />
                <TextView android:textSize="@dimen/dimen_12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yuan_" />
                <TextView android:textSize="@dimen/dimen_12dp" android:id="@id/ec_zhifubao_tv_privilege" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="(无优惠)" />
            </LinearLayout>
            <Button android:textColor="@color/white" android:id="@id/ec_zhifubao_btn_carry" android:background="@drawable/btn_blue_click" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_50dp" android:layout_marginLeft="@dimen/dimen_15dp" android:layout_marginRight="@dimen/dimen_15dp" android:text="@string/carry_now" />
        </LinearLayout>
        <ProgressBar android:id="@id/ec_zhifubao_pb_wait" android:visibility="gone" android:layout_width="@dimen/dimen_30dp" android:layout_height="@dimen/dimen_30dp" android:layout_marginTop="@dimen/dimen_200dp" android:indeterminateDuration="2000" android:layout_centerHorizontal="true" style="@style/mProgress_circle" />
    </RelativeLayout>
</LinearLayout>